# qrcodefyi

./: README.md  demo.tape  pyproject.toml
src/qrcodefyi/: __init__.py  __main__.py  api.py  cli.py  mcp_server.py
tests/: test_api.py
